foto de perfil e alguns nomes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: início
-      - href: formacao.qmd
+      - href: experiencia.qmd
         text: experiência
       - href: projetos.qmd
         text: projetos
